// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Form Container should match snapshot with no props passed 1`] = `
<div
  className="form-container drop-down"
>
  <div
    className="title-form"
  >
    <input
      className="title"
      name="title"
      onChange={[Function]}
      placeholder="Add a Title"
      type="text"
      value=""
    />
  </div>
  <div />
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="listItemText"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value=""
    />
  </form>
  <button
    className="save-button"
    onClick={[Function]}
  >
    Save
  </button>
</div>
`;

exports[`Form Container should match snapshot with notecard prop 1`] = `
<div
  className="form-container pop-up"
>
  <div
    className="title-form"
  >
    <input
      className="title"
      name="title"
      onChange={[Function]}
      placeholder="Add a Title"
      type="text"
      value="Mock Note"
    />
  </div>
  <div>
    <ListItem
      editing={true}
      item={
        Object {
          "body": "nimsum",
          "completed": false,
          "id": "1",
        }
      }
      key="1"
      updateListItems={[Function]}
    />
    <ListItem
      editing={true}
      item={
        Object {
          "body": "dimsum",
          "completed": false,
          "id": "2",
        }
      }
      key="2"
      updateListItems={[Function]}
    />
  </div>
  <form
    onSubmit={[Function]}
  >
    <input
      autoFocus={true}
      name="listItemText"
      onBlur={[Function]}
      onChange={[Function]}
      type="text"
      value=""
    />
  </form>
  <button
    className="save-button"
    onClick={[Function]}
  >
    Save
  </button>
</div>
`;
